crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_a_a_equals_dbl_quote_9_dbl_quote_gt.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<a a=\"9\">\"####)"
---
[
    Token {
        data: "a",
        attrs: Some(
            {
                "a": Some(
                    (
                        "9",
                        Double,
                    ),
                ),
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "a",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
